# AutoTerminal

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  setup.py
.gitea/workflows/: push.yaml_back
.github/workflows/: push.yaml
autoterminal/: __init__.py  history.py  main.py
autoterminal/config/: loader.py  manager.py
autoterminal/history/: __init__.py  history.py
autoterminal/llm/: client.py
autoterminal/utils/: helpers.py  logger.py
